[gd_scene load_steps=10 format=2]

[ext_resource path="res://Modelos/Floresta/CasaMadeira/Interior/Casa_MadeiraInterior.tscn" type="PackedScene" id=1]
[ext_resource path="res://Modelos/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Floresta/Casa_interior.gd" type="Script" id=3]
[ext_resource path="res://Mapas/pause_menu.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 10.0331, 11.3545, 11.837 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.463424, 2.90686, 1.65449 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Casa" type="Spatial"]
script = ExtResource( 3 )

[node name="Casa_MadeiraInterior" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.66004, 0, 0, 0, 1.66004, 0, 0, 0, 1.66004, 1, 2, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -5.96046e-08, 0, 1, 0, 1, 0, -1, 0, -5.96046e-08, 4.34048, 0.671289, 0.228977 )

[node name="PlayerCheck" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="PlayerCheck"]
shape = SubResource( 1 )

[node name="Porta2" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Porta2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.30403, 1.11328, 0 )
shape = SubResource( 2 )

[node name="TranformScreen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="TranformScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="Fade_anim" type="AnimationPlayer" parent="TranformScreen"]
anims/RESET = SubResource( 3 )
anims/fade_in = SubResource( 4 )
anims/fade_out = SubResource( 5 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="pause_menu" parent="GUI" instance=ExtResource( 4 )]
visible = false

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_PlayerCheck_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_PlayerCheck_body_exited"]
[connection signal="animation_finished" from="TranformScreen/Fade_anim" to="." method="_on_Fade_anim_animation_finished"]
